// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvSearch should render correctly when \`clearAriaLabel\` is set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl">
    <!---->
    <div class="bx--search-magnifier">
      <search20-stub class="bx--search-magnifier-icon"></search20-stub>
    </div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="test clear aria label" aria-label="test clear aria label" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`formItem\` is false 1`] = `
<cv-wrapper-stub tagtype="" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl cv-search">
    <!---->
    <div class="bx--search-magnifier">
      <search20-stub class="bx--search-magnifier-icon"></search20-stub>
    </div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`kind\` is toolbar 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl bx--toolbar-search"><button type="button" aria-label="Toolbar search" class="bx--toolbar-search__btn">
      <anonymous-stub class="bx--search-magnifier"></anonymous-stub>
    </button>
    <!----> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button></div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`placeholder\` is set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl">
    <!---->
    <div class="bx--search-magnifier">
      <search20-stub class="bx--search-magnifier-icon"></search20-stub>
    </div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="test placeholder" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`size\` is large 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--lg">
    <!---->
    <div class="bx--search-magnifier">
      <search20-stub class="bx--search-magnifier-icon"></search20-stub>
    </div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`size\` is small 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--sm">
    <!---->
    <div class="bx--search-magnifier">
      <search20-stub class="bx--search-magnifier-icon"></search20-stub>
    </div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`size\` is xl 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl">
    <!---->
    <div class="bx--search-magnifier">
      <search20-stub class="bx--search-magnifier-icon"></search20-stub>
    </div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`toolbarAriaLabel\` is set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl bx--toolbar-search"><button type="button" aria-label="test toolbar aria label" class="bx--toolbar-search__btn">
      <anonymous-stub class="bx--search-magnifier"></anonymous-stub>
    </button>
    <!----> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button></div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly with only \`value\` prop set 1`] = `
<div class="cv-search bx--form-item">
  <div role="search" aria-label="Search box" class="bx--search bx--search--xl">
    <!---->
    <div class="bx--search-magnifier"><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" class="bx--search-magnifier-icon">
        <path d="M29,27.5859l-7.5521-7.5521a11.0177,11.0177,0,1,0-1.4141,1.4141L27.5859,29ZM4,13a9,9,0,1,1,9,9A9.01,9.01,0,0,1,4,13Z"></path>
      </svg></div> <label for="test-1" class="bx--label" style="display: none;"></label> <input id="test-1" type="text" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close"><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true">
        <path d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"></path>
      </svg></button>
  </div>
</div>
`;
